fix: div render wrong position

--- a/src/components/Map/styles.module.scss
+++ b/src/components/Map/styles.module.scss
@@ -1,4 +1,6 @@
 .map {
+  position: absolute;
+  left: 34%;
   width: 66%;
   height: 100%;
 }
